--- a/project-h5/index.html
+++ b/project-h5/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1.0,maximum-scale=1,user-scalable=no"
+    />
+    <title>数字文化力</title>
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1,user-scalable=no">
-  <title>my-project</title>
-</head>
-
-<body>
-  <div id="app"></div>
-  <!-- built files will be auto injected -->
-</body>
-
+  <body>
+    <div id="app"></div>
+  </body>
+  <style>
+    body {
+      background-color: #f2f3f8;
+      margin: 0;
+      padding: 0;
+    }
+  </style>
 </html>
