--- a/project-h5/index.html
+++ b/project-h5/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width,initial-scale=1.0,maximum-scale=1,user-scalable=no"
     />
-    <title>数字文化力</title>
+    <title>凯盛浩丰企宣素材收集</title>
   </head>
 
   <body>
@@ -14,7 +14,7 @@
   </body>
   <style>
     body {
-      background-color: #f2f3f8;
+      /* background-color: #f2f3f8; */
       margin: 0;
       padding: 0;
     }
